feat: pridanie Angular frontendu a úpravy backendu pre autentifikáciu