@@ -2,27 +2,38 @@ package sk.posam.fsa.security;
 
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.security.authentication.AbstractAuthenticationToken;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.stereotype.Component;
+import sk.posam.fsa.dto.UserDto;
+import sk.posam.fsa.mapper.UserMapper;
+import sk.posam.fsa.ports.UserRepository;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 @Component
 public class JwtConverter implements Converter<Jwt, AbstractAuthenticationToken> {
 
+    private final UserRepository userRepository;
+    private final UserMapper userMapper;
+
+    public JwtConverter(UserRepository userRepository, UserMapper userMapper) {
+        this.userRepository = userRepository;
+        this.userMapper = userMapper;
+    }
+
     @Override
     public AbstractAuthenticationToken convert(Jwt jwt) {
         String email = jwt.getClaimAsString("email");
-        String role = jwt.getClaimAsString("role");
 
-        List<SimpleGrantedAuthority> authorities = Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + role));
-
-        return new org.springframework.security.authentication.UsernamePasswordAuthenticationToken(
-                email,
-                null,
-                authorities
-        );
+        // Môžeš aj bez authorities, ak nepotrebuješ kontrolovať role
+        return new UsernamePasswordAuthenticationToken(email, null, List.of());
     }
+
+
+
 }
+
